--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         maven(){
             url 'https://maven.google.com'
         }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -24,6 +25,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
