--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-crash:11.0.4'
     implementation 'com.google.firebase:firebase-invites:11.0.4'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
+
+
 
 
 
